# latin_squares

./: Makefile.am  Makefile.in  aclocal.m4  configure.ac
src/: config.h.in  find_transversal_depth.c  mates.c  moles.c  parallel_mates.c  parallel_transversals.c  transversals.c
test/: L10.txt  L12.1.txt  L12.2.txt  L12.txt  L4.txt  cayley16.txt  cayley32.txt
